# go-pedalboard

./: .gitignore  CONTRIBUTING.md  LICENSE.md  Makefile  OWNERS.md  README.md  go.mod
cpp/: CMakeLists.txt
cpp/include/: pedalboard.h
cpp/src/: pedalboard.cpp
examples/: main.go
pkg/pedalboard/: pedalboard.go  pedalboard.h  pedalboard_test.go
